Main Welcome Responsive Div
preparing DBcontext, minor appearence changes

--- a/NutshellRepo/appsettings.json
+++ b/NutshellRepo/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-OO6T29Q;Database=NutshellRepo;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  }
 }
