--- a/NutshellRepo/appsettings.json
+++ b/NutshellRepo/appsettings.json
@@ -10,7 +10,15 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OO6T29Q;Database=NutshellRepo;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-OO6T29Q;Database=StudyLogBook;Trusted_Connection=True;MultipleActiveResultSets=true"
 
-  }
+  },
+
+  "SendEmailSettings": {
+    "SendEmailFromEmail": "noreply@nutshellrepo.com",
+    "SendEmailFromName": "NutshellRepo"
+  },
+
+  "NutshellRepoSendGridKey": "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"
+
 }
