Delete Specific Message and Mark Message As unread
views and ajax calls, preparing for reply functionalities

--- a/NutshellRepo/appsettings.json
+++ b/NutshellRepo/appsettings.json
@@ -10,7 +10,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-OO6T29Q;Database=StudyLogBook;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=StudyLogBook;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
 
